--- a/index.html
+++ b/index.html
@@ -119,11 +119,11 @@
         
         $(function() {
           var myMap = new MapsLib({
-            fusionTableId:      "1m4Ez9xyTGfY2CU6O-UgEcPzlS0rnzLU93e4Faa0",
-            googleApiKey:       "AIzaSyA3FQFrNr5W2OEVmuENqhb2MBB2JabdaOY",
-            locationColumn:     "geometry",
-            map_center:         [41.8781136, -87.66677856445312],
-            locationScope:      "chicago"
+            fusionTableId:      "15EhnJxPFnOoxZb576FCNMxEPTuB9V5hXnyPBq4EG",
+            googleApiKey:       "AIzaSyD5qqLZ3VVSCHrLyCc11xw2prnnnEOSv8U",
+            locationColumn:     "shape",
+            map_center:         [49.142211, -102.981366],
+            locationScope:      ""
           });
 
           var autocomplete = new google.maps.places.Autocomplete(document.getElementById('search_address'));
