--- a/index.html
+++ b/index.html
@@ -122,6 +122,9 @@
             googleApiKey:       "AIzaSyD5qqLZ3VVSCHrLyCc11xw2prnnnEOSv8U",
             locationColumn:     "shape",
             map_center:         [49.142211, -102.981366],
+            searchRadius:       88514,
+            defaultZoom:        115,
+            addrMarkerImage:    'images/blue-pushpin.png',
             locationScope:      ""
           });
           var autocomplete = new google.maps.places.Autocomplete(document.getElementById('search_address'));
