--- a/index.html
+++ b/index.html
@@ -48,10 +48,10 @@
               <label>
                 within
                 <select id='search_radius'>
-                  <option value='88514'>55 miles</option>
-                  <option value='48280'>30 miles</option>
-                  <option value='24140'>15 miles</option>
                   <option value='8046'>5 miles</option>
+                  <option value='24140'>15 miles</option>
+                  <option value='48280'>30 miles</option>
+                  <option value='88514'>55 miles</option>
                 </select>
               </label>
             </p>
@@ -61,17 +61,9 @@
             <div class='row'>
               <div class='col-md-6'>
                 <ul>
-                  <li><a href='https://github.com/derekeder/FusionTable-Map-Template/wiki/Filter-examples#wiki-checkboxes'>Checkboxes</a></li>
-                  <li><a href='https://github.com/derekeder/FusionTable-Map-Template/wiki/Filter-examples#wiki-radiobuttons'>Radio buttons</a></li>
-                  <li><a href='https://github.com/derekeder/FusionTable-Map-Template/wiki/Filter-examples#wiki-drop-down-lists'>Drop down lists</a></li>
-                  <li><a href='https://github.com/derekeder/FusionTable-Map-Template/wiki/Filter-examples#wiki-textsearches'>Text searches</a></li>
-                </ul>
-              </div>
-              <div class='col-md-6'>
-                <ul>
-                  <li><a href='https://github.com/derekeder/FusionTable-Map-Template/wiki/Filter-examples#wiki-sliders'>Sliders</a></li>
-                  <li><a href='https://github.com/derekeder/FusionTable-Map-Template/wiki/Filter-examples#wiki-date-sliders'>Date sliders</a></li>
-                  <li><a href='https://github.com/derekeder/FusionTable-Map-Template/wiki/List-search-results'>Results lists</a></li>
+                  <div class='well'>
+  <div id='results_list'></div>
+</div>
                 </ul>
               </div>
             </div>
