--- a/index.html
+++ b/index.html
@@ -46,6 +46,9 @@
             </p>
             <br />
             <h4>Custom filters and views</h4>
+            <div class='well'>
+  <div id='results_list'></div>
+</div>
             <br />
             <a class='btn btn-primary' id='search' href='#'>
               <i class='glyphicon glyphicon-search'></i>
